--- a/todo/src/app/home/home.page.html
+++ b/todo/src/app/home/home.page.html
@@ -10,48 +10,50 @@
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-card *ngFor="let item of todoItems; let i = index">
+  <ion-card *ngFor="let item of todoItems">
     <ion-card-header>
       <ion-card-subtitle>
-        {{item.category}} 
-        <!-- {{item.category}} ({{item.priority}} priority) -->
-        
+        {{item.category}}
       </ion-card-subtitle>
-      <ion-item>
-        <!-- <ion-icon size="small" name="document-text-outline"></ion-icon> -->
-        <ion-icon size="small" name="flag-outline" [style.color]="item.priority === 'high' ? 'red' : (item.priority === 'low' ? 'green' : 'orange')"></ion-icon>
-        <ion-label>{{item.name}}</ion-label>
-
-      </ion-item>
     </ion-card-header>
-
-    <ion-card-content>
-      <ion-row>
+    <ion-card *ngFor="let item of item.tasks; let i = index">
+      <ion-card-header>
+        <ion-card-subtitle>
+          {{item.category}}
+          <!-- {{item.category}} ({{item.priority}} priority) -->
+    
+        </ion-card-subtitle>
         <ion-item>
-          {{item.detail}}
+          <!-- <ion-icon size="small" name="document-text-outline"></ion-icon> -->
+          <ion-icon size="small" name="flag-outline" [style.color]="item.priority === 'high' ? 'red' : (item.priority === 'low' ? 'green' : 'orange')"></ion-icon>
+          <ion-label>{{item.name}}</ion-label>
+        </ion-item>
+      </ion-card-header>
+      <ion-card-content>
+        <ion-row>
+          <ion-item>
+            {{item.detail}}
+          </ion-item>
+        </ion-row>
+          <ion-item>
+            <ion-label *ngIf="item.daysUntilDue <= 0" style="color:white;background-color:rgb(246, 5, 13)">Item is overdue by {{item.daysUntilDue * -1}} days</ion-label>
+            <ion-label *ngIf="item.daysUntilDue <= 3 && item.daysUntilDue > 0" style="color:white;background-color:rgb(255, 123, 0)">Due on: {{item.dueDate | date: 'fullDate'}} | {{item.daysUntilDue}} days remain</ion-label>
+            <ion-label *ngIf="item.daysUntilDue > 3" style="color:white;background-color:rgb(8, 99, 36)">Due on: {{item.dueDate | date: 'fullDate'}} | {{item.daysUntilDue}} days remain</ion-label>
+          </ion-item>
+        <ion-row>
+        </ion-row>
+      </ion-card-content>
+      <ion-row>
+        <ion-item button (click)="addNewTask(item)">
+          <ion-icon name="create-outline"></ion-icon>
+          <p>Update</p>
+        </ion-item>
+        <ion-item button (click)="remove(item.id)">
+          <ion-icon name="trash"></ion-icon>
+          <p>Remove</p>
         </ion-item>
       </ion-row>
-        <ion-item>
-          <ion-label *ngIf="item.daysUntilDue <= 0" style="color:white;background-color:rgb(246, 5, 13)">Item is overdue by {{item.daysUntilDue * -1}} days</ion-label>
-          <ion-label *ngIf="item.daysUntilDue <= 3 && item.daysUntilDue > 0" style="color:white;background-color:rgb(255, 123, 0)">Due on: {{item.dueDate | date: 'fullDate'}} | {{item.daysUntilDue}} days remain</ion-label>
-          <ion-label *ngIf="item.daysUntilDue > 3" style="color:white;background-color:rgb(8, 99, 36)">Due on: {{item.dueDate | date: 'fullDate'}} | {{item.daysUntilDue}} days remain</ion-label>
-        </ion-item>
-      <ion-row>
-
-      </ion-row>
-
-    </ion-card-content>
-
-    <ion-row>
-      <ion-item button (click)="addNewTask(item)">
-        <ion-icon name="create-outline"></ion-icon>
-        <p>Update</p>
-      </ion-item>
-      <ion-item button (click)="remove(item.id)">
-        <ion-icon name="trash"></ion-icon>
-        <p>Remove</p>
-      </ion-item>
-    </ion-row>
+    </ion-card>
   </ion-card>
 
   <ion-fab vertical="bottom" horizontal="end" slot="fixed">
