--- a/todo/src/app/home/home.page.html
+++ b/todo/src/app/home/home.page.html
@@ -11,7 +11,7 @@
 
 <ion-content [fullscreen]="true">
 
-  <ion-searchbar placeholder="Search for a task..."></ion-searchbar>
+  <ion-searchbar [formControl]="searchField" debounce="100" placeholder="Search for a task..."></ion-searchbar>
   <ion-card class="cat-container" *ngFor="let cat of cats">
     <ion-card-header>
       <ion-card-subtitle>
@@ -36,9 +36,15 @@
             </ion-item>
           </ion-row>
             <ion-item>
-              <ion-label *ngIf="item.daysUntilDue <= 0" style="color:white;background-color:rgb(246, 5, 13)">Item is overdue by {{item.daysUntilDue * -1}} days</ion-label>
-              <ion-label *ngIf="item.daysUntilDue <= 3 && item.daysUntilDue > 0" style="color:white;background-color:rgb(255, 123, 0)">Due on: {{item.dueDate | date: 'fullDate'}} | {{item.daysUntilDue}} days remain</ion-label>
-              <ion-label *ngIf="item.daysUntilDue > 3" style="color:white;background-color:rgb(8, 99, 36)">Due on: {{item.dueDate | date: 'fullDate'}} | {{item.daysUntilDue}} days remain</ion-label>
+              <ion-label class="due-label" text-wrap *ngIf="item.daysUntilDue <= 0" style="color:white; background-color:rgb(246, 5, 13)">Item is overdue by {{item.daysUntilDueFormatted}}</ion-label>
+              <ion-label class="due-label" text-wrap *ngIf="item.daysUntilDue <= 3 && item.daysUntilDue > 0" style="color:white; background-color:rgb(255, 123, 0)">
+                <ion-row>Due on: {{item.dueDate| date: 'fullDate'}}</ion-row>
+                {{item.daysUntilDueFormatted}} remain
+              </ion-label>
+              <ion-label class="due-label" text-wrap *ngIf="item.daysUntilDue > 3" style="color:white; background-color:rgb(8, 99, 36)">
+                <ion-row>Due on: {{item.dueDate | date: 'fullDate'}}</ion-row>
+                {{item.daysUntilDueFormatted}} remain
+              </ion-label>
             </ion-item>
           <ion-row>
           </ion-row>
